--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ span{
 }
 .left{
     width: 50%;
+    padding: 5%;
 }
 .right{
     width: 50%;
@@ -10,14 +11,23 @@ span{
 section{
     display: flex;
 }
-h1,p{
+body{
     font-family: 'Poppins', sans-serif;
 }
 h1{
-    font-size: 40px;
+    font-size: 50px;
+    color: #575757;
 }
-button{
+a{
     color: white;
-    background-color: orange;
-    padding:10px;
+    text-decoration: none;
+    background-image: linear-gradient(orangered, salmon);
+    padding:15px 30px;
+    border-radius: 40px;
+}
+.right img{
+    height: 600px;
+}
+.no2{
+background-image: url(photo/7.png);
 }
